compiler/testData/cli/jvm/XeagerLambdaAnalysis/unitConversionWithEla.out
compiler/testData/cli/jvm/XeagerLambdaAnalysis/unitConversion.kt:7:13: error: argument type mismatch: actual type is '() -> String', but '() -> Unit' was expected.
    runUnit(produce)
            ^^^^^^^
COMPILATION_ERROR
